--- a/style.css
+++ b/style.css
@@ -69,8 +69,26 @@ body {
 
 #score {
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 10px;
+}
+
+#levelNum {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+}
+
+#printScore {
+  position: absolute;
+  top: 15px;
+  right: 50px;
+}
+
+#printLevelNum {
+  position: absolute;
+  top: 0px;
+  right: 50px;
 }
 
 #player.has-box {
